# irongraph

./: .gitignore  Cargo.toml  README.md  irongraph.toml
apps/desktop/: .gitignore  package.json  pnpm-lock.yaml
apps/desktop/e2e/: run_real.sh  verification.spec.ts
apps/desktop/src/: App.tsx  bindings.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/migrations/: 20250101_init.sql
apps/desktop/src-tauri/src/: db.rs  lib.rs
apps/desktop/src/features/agent/: AgentChat.tsx
apps/desktop/src/features/debug/: LlmTester.tsx
apps/desktop/src/features/files/: FileExplorer.tsx
apps/desktop/src/features/profile/: ProfileForm.tsx
apps/desktop/src/features/terminal/: CommandRunner.tsx
apps/desktop/src/hooks/: useAgentLoop.ts  useBackendAgent.ts
apps/desktop/src/lib/: systemPrompt.ts
apps/src/: bindings.ts
crates/agent_core/: Cargo.toml
crates/agent_core/src/: lib.rs  shell.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/feature_profile/: Cargo.toml
crates/feature_profile/src/: lib.rs
crates/irongraph_protocol/: Cargo.toml
crates/irongraph_protocol/src/: lib.rs
crates/llm_gateway/: Cargo.toml
crates/llm_gateway/src/: lib.rs
crates/shared_db/: Cargo.toml
crates/shared_db/src/: lib.rs
crates/terminal_manager/: Cargo.toml
crates/terminal_manager/src/: lib.rs  tools.rs
crates/workspace_manager/: Cargo.toml
crates/workspace_manager/src/: lib.rs  skeleton.rs  tools.rs
