[package]
name = "agent_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "^2.0.0", features = [] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

# Workspace Dependencies
llm_gateway = { path = "../llm_gateway" }
terminal_manager = { path = "../terminal_manager" }
workspace_manager = { path = "../workspace_manager" }
common = { path = "../common" }
shlex = "1.3.0"
