[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
specta = { version = "=2.0.0-rc.22", features = ["serde"] }
tauri-specta = { version = "=2.0.0-rc.21", features = [] }
tauri = { version = "^2.0.0", features = ["specta"] }
portable-pty = "0.9.0"
tokio = { version = "1", features = ["sync"] }
radkit = "0.0.3"
