[package]
name = "llm_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = ["serde"] }
tauri-specta = { version = "=2.0.0-rc.21", features = [] }
tauri = { version = "^2.0.0", features = ["specta"] }
thiserror = "1"
quick-xml = { version = "0.31", features = ["serialize"] }

[dev-dependencies]
mockito = "1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
