[package]
name = "llm_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
# specta removed
tauri = { version = "^2.0.0", features = [] }
