[package]
name = "terminal_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["process", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
# specta removed
# tauri-specta removed
tauri = { version = "^2.0.0", features = [] }
common = { path = "../common" }
portable-pty = "0.9.0"
uuid = { version = "1.19.0", features = ["v4"] }
radkit = { git = "https://github.com/agents-sh/radkit.git" }
schemars = "0.8"
workspace_manager = { path = "../workspace_manager" }
shlex = "1.3.0"
regex = "1.12.2"
serde_json = "1"
async-trait = "0.1"
