[package]
name = "workspace_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
# specta removed
# tauri-specta removed
tauri = { version = "^2.0.0", features = [] } # Removed specta feature
common = { path = "../common" }
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.25"
syn = { version = "2.0.111", features = ["full", "visit-mut"] }
prettyplease = "0.2.37"
oxc_allocator = "0.101.0"
oxc_parser = "0.101.0"
oxc_span = "0.101.0"
oxc_codegen = "0.101.0"
oxc_ast = "0.101.0"
oxc_ast_visit = "0.101.0"
radkit = { git = "https://github.com/agents-sh/radkit.git" }
schemars = "0.8"
regex = "1.12.2"
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
