[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = ["specta"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-specta = { version = "=2.0.0-rc.21", features = ["javascript", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["serde"] }
specta-typescript = "0.0.9"
feature_profile = { path = "../../../crates/feature_profile" }
llm_gateway = { path = "../../../crates/llm_gateway" }
workspace_manager = { path = "../../../crates/workspace_manager" }
terminal_manager = { path = "../../../crates/terminal_manager" }
common = { path = "../../../crates/common" }
agent_core = { path = "../../../crates/agent_core" }
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
irongraph_protocol = { version = "0.1.0", path = "../../../crates/irongraph_protocol" }
shared_db = { version = "0.1.0", path = "../../../crates/shared_db" }
